feat: Add roles and permission in JWT token in different array